tests/base/invalid/SetComprehension_CompileFail_2.whiley
void System::main([string] args):
    xs = 1
    zs = { x | y ∈ xs }
    out->println(str(xs))
    out->println(str(zs))
